# telecom-integration-infrastructure-lab

./: .gitignore  CMakeLists.txt  DEMO.md  Dockerfile  PROFESSIONAL_DEMO.html  README.md  conftest.py  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
config/: firewall_rules.json  telecom_nodes.csv
docker/: Dockerfile
docs/: vmware_lab_notes.md
k8s/: deployment.yaml  service.yaml
scripts/: checkpoint_api_client.py  firewall_rule_validator.py  generate_lab_report.py  ssh_node_check.py
src/: config_parser.cpp  config_parser.h  integration_report.cpp  integration_report.h  main.cpp  network_validator.cpp  network_validator.h
tests/: test_checkpoint_client.py  test_firewall_validator.py  test_validator.cpp
